--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
     "dependencies": {
         "cordova-plugin-splashscreen": "6.0.0",
         "cordova-plugin-whitelist": "1.3.4",
-        "monaca-plugin-monaca-core": "3.3.1"
+        "monaca-plugin-monaca-core": "3.3.1",
+        "cordova-plugin-dialogs": "2.0.2",
+        "cordova-plugin-vibration": "3.1.1"
     },
     "cordova": {
         "plugins": {
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
-            "monaca-plugin-monaca-core": {}
+            "monaca-plugin-monaca-core": {},
+            "cordova-plugin-dialogs": {},
+            "cordova-plugin-vibration": {}
         }
     },
     "scripts": {
